@@ -4,6 +4,6 @@ TARGET = $(INITRD) $(KERNEL) $(DEBIAN_CD_INFO)
 
 MANIFEST-KERNEL = "kernel for use with isolinux to build a CD"
 MANIFEST-INITRD = "initrd for use with isolinux to build a CD"
-MANIFEST-DEBIAN_CD_INFO = "isolinux help screens for CD"
+MANIFEST-DEBIAN_CD_INFO = "isolinux config files for CD"
 
 TYPE = cdrom/isolinux
