@@ -5,8 +5,12 @@ EXTRADRIVERS = $(BASE_TMP)floppy_cd-drivers/tree
 EXTRATARGETS = build_floppy_cd-drivers
 TARGET = $(INITRD) $(KERNEL) $(DEBIAN_CD_INFO)
 
+EXTRATARGETS = build_cdrom_isolinux-2.6
+INITRD_2.6 = tmp/cdrom_isolinux-2.6/initrd.gz
+KERNEL_2.6 = tmp/cdrom_isolinux-2.6/vmlinuz
+
 MANIFEST-KERNEL = "kernel for use with isolinux to build a CD"
 MANIFEST-INITRD = "initrd for use with isolinux to build a CD"
-MANIFEST-DEBIAN_CD_INFO = "isolinux help screens for CD"
+MANIFEST-DEBIAN_CD_INFO = "isolinux config files for CD"
 
 TYPE = cdrom/isolinux
