@@ -97,6 +97,35 @@ arch_boot_screens:
 		cp $(SPLASH_RLE) $(TEMP_BOOT_SCREENS)/splash.rle; \
 	fi
 
+# isolinux CD info directory, including help screens and an isolinux.cfg.
+# Note that the paths in the isolinux.cfg must match the paths used on the
+# CD by debian-cd.
+.PHONY: arch_cd_info_dir
+arch_cd_info_dir:
+	-rm -f $(TEMP_CD_INFO_DIR)/*
+	mkdir -p $(TEMP_CD_INFO_DIR)
+	
+	cp -a $(TEMP_BOOT_SCREENS)/* $(TEMP_CD_INFO_DIR)
+
+	cat boot/x86/syslinux.cfg \
+	| ramdisk-size-subst $(TEMP_INITRD) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
+		BUILD_DATE "$(BUILD_DATE)" \
+		KERNEL /install/vmlinuz INITRD /install/initrd.gz \
+	> $(TEMP_CD_INFO_DIR)/isolinux.cfg
+
+	if [ -n "$(INITRD_2.6)" ] && [ -n "$(KERNEL_2.6)" ]; then \
+		cat boot/x86/syslinux.cfg.with26 \
+		| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+		| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+			DEBIAN_VERSION "$(DEBIAN_VERSION)" \
+			BUILD_DATE "$(BUILD_DATE)" \
+			KERNEL /install/vmlinuz INITRD /install/initrd.gz \
+			KERNEL_26 /install/2.6/linux INITRD_26 /install/2.6/initrd.gz \
+		> $(TEMP_CD_INFO_DIR)/isolinux.cfg.with26; \
+	fi
+
 # Miniature CD image using isolinux, with only an initrd, no udebs or debs.
 .PHONY: arch_miniiso
 arch_miniiso:
@@ -145,6 +174,7 @@ arch_miniiso:
 		-no-emul-boot -boot-load-size 4 -boot-info-table \
 		-o $(TEMP_MINIISO) $(TEMP_CD_TREE)
 
+# Netboot images, including a small iso with the netboot stuff on it.
 .PHONY: arch_netboot_dir
 arch_netboot_dir:
 	-rm -f $(TEMP_NETBOOT_DIR)
